--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        A Navy submarine-force Veteran with a broad range of technical skills and six years of
+                        A Navy submarine-force Veteran with a broad range of technology skills and five years of
                         experience as a network engineer. Through the application of system knowledge, technical rigor
-                        and collaboration across diverse groups, built a track record of providing solutions to complex
-                        problems in a critical production environment. A versatile leader and member of
-                        high-performance teams, accustomed to completing work with a global impact. Pursuing an
+                        and collaboration, built a track record of providing solutions to complex
+                        technical problems in a critical production environment. A versatile leader and member of
+                        high-performance teams, accustomed to doing work with a global impact. Pursuing an
                         education and career as a software engineer, eager to face new challenges in the fast-paced
                         technology sector.
                     </p>
@@ -91,33 +91,33 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="October 2018 - March 2019">
                 <h3>Microsoft Software & Skills Academy (MSSA)</h3>
                 <h4>Participant</h4>
+                <a href="https://military.microsoft.com/programs/mssa/">More About MSSA</a>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                    An intense 4 month coding boot camp hosted by Microsoft at an accredited university for
+                    service members, provides academic and hands-on training to fill roles in software engineering.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="December 2012 – December 2018">
+                <h3>US Navy</h3>
+                <h4>Communications Supervisor | Network Engineer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                    Managed an awesome team in the operation of a secure communications facility and data center onboard a
+                    nuclear submarine during eight deployments and in support of missions vital to national security.
+                    Consistently recognized and awarded for outstanding performance by three Commanding Officers. 
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="2007 – 2011">
+                <h3>Christie's | Freemans's</h3>
+                <h4>Property Manager</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                    laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                    Managed property collections and warehousing for several internationally prominent fine art
+                    institutions. Trusted daily with the logistics, mounting and installation of high-value works of
+                    art worth millions.
                 </p>
             </div>
         </div>
@@ -127,30 +127,23 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Saint Martin's University</h3>
+            <span class="education-date">October 2018 - March 2019</span>
+            <h4>Certificate in Computer Science</h4>
+            <h5>Minor in CS towards Bachelor's</h5>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat
-                laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                libero. Morbi dapibus porta quam laoreet placerat.
+                Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and Networking. 
             </p>
         </div>
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Community College of Philadelphia</h3>
+            <span class="education-date">Graduated 2011</span>
+            <h4>Asociate of Arts in General Studies</h4>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Graduated with High Honors while working full-time from this outstanding Philadelphia Community College.
                 </li>
             </ul>
         </div>
@@ -168,13 +161,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>C-Sharp Code Examples</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                            volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus.
-                            Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Examples of Data Structures and Algorithms implemented in C#.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,13 +177,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>JavaScript Code Examples</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam
-                            volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus.
-                            Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Examples of Data Structures and Algorithms implemented in JavaScript.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
