--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
                 <h3>US Navy</h3>
                 <h4>Communications Supervisor | Network Engineer</h4>
                 <p>
-                    Managed an awesome team in the operation of a secure communications facility and data center onboard a
+                    Managed an awesome team in the operation of a secure communications facility and data center
+                    onboard a
                     nuclear submarine during eight deployments and in support of missions vital to national security.
-                    Consistently recognized and awarded for outstanding performance by three Commanding Officers. 
+                    Consistently recognized and awarded for outstanding performance by three Commanding Officers.
                 </p>
             </div>
 
@@ -132,7 +133,7 @@
             <h4>Certificate in Computer Science</h4>
             <h5>Minor in CS towards Bachelor's</h5>
             <p>
-                Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and Networking. 
+                Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and Networking.
             </p>
         </div>
         <!-- End .education-block -->
@@ -143,7 +144,8 @@
             <h4>Asociate of Arts in General Studies</h4>
             <ul>
                 <li>
-                    Graduated with High Honors while working full-time from this outstanding Philadelphia Community College.
+                    Graduated with High Honors while working full-time from this outstanding Philadelphia Community
+                    College.
                 </li>
             </ul>
         </div>
@@ -223,10 +225,13 @@
 
     <div id="contact">
         <h2>Get in Touch</h2>
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
+            data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
+                H.</a></div>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
+                <input type="email" name="_replyto" placeholder="your_email@gmail.com" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
@@ -240,7 +245,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; Trevor Heehs
                     </p>
                 </div>
                 <div class="col-sm-2 top">
@@ -251,23 +256,9 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow"
-                                    aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
