--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        A Navy submarine-force Veteran with a broad range of technology skills and five years of
+                        A Navy submarine-force Veteran with a broad range of skills in technology and five years of
                         experience as a network engineer. Through the application of system knowledge, technical rigor
                         and collaboration, built a track record of providing solutions to complex
-                        technical problems in a critical production environment. A versatile leader and member of
+                        problems in a critical production environment. A versatile leader and member of
                         high-performance teams, accustomed to doing work with a global impact. Pursuing an
                         education and career as a software engineer, eager to face new challenges in the fast-paced
                         technology sector.
@@ -94,18 +94,18 @@
             <div data-date="October 2018 - March 2019">
                 <h3>Microsoft Software & Skills Academy (MSSA)</h3>
                 <h4>Participant</h4>
-                <a href="https://military.microsoft.com/programs/mssa/">More About MSSA</a>
                 <p>
                     An intense 4 month coding boot camp hosted by Microsoft at an accredited university for
                     service members, provides academic and hands-on training to fill roles in software engineering.
                 </p>
+                <a href="https://military.microsoft.com/programs/mssa/">More About MSSA</a>
             </div>
 
             <div data-date="December 2012 – December 2018">
                 <h3>US Navy</h3>
                 <h4>Communications Supervisor | Network Engineer</h4>
                 <p>
-                    Managed an awesome team in the operation of a secure communications facility and data center
+                    Managed a team in the operation of a secure communications facility and data center
                     onboard a
                     nuclear submarine during eight deployments and in support of missions vital to national security.
                     Consistently recognized and awarded for outstanding performance by three Commanding Officers.
