--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
 <body>
@@ -224,10 +225,10 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
-        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
-            data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
-                H.</a></div>
+    <h2>Get in Touch</h2>
+    <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
+    data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
+        Heehs</a></div>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
