--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                 <h4>Communications Supervisor | Network Engineer</h4>
                 <p>
                     Managed a team in the operation of a secure communications facility and data center
-                    onboard a
-                    nuclear submarine during eight deployments and in support of missions vital to national security.
+                    onboard a nuclear submarine during eight deployments and in support of missions vital to national security.
                     Consistently recognized and awarded for outstanding performance by three Commanding Officers.
                 </p>
             </div>
@@ -131,10 +130,12 @@
         <div class="education-block">
             <h3>Saint Martin's University</h3>
             <span class="education-date">October 2018 - March 2019</span>
-            <h4>Certificate in Computer Science</h4>
-            <h5>Minor in CS towards Bachelor's</h5>
+            <h4>Certificate in Computer Science (Minor in CS towards Bachelor's)</h4>
             <p>
-                Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and Networking.
+                <li>
+                    Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and
+                    Networking.
+                </li>
             </p>
         </div>
         <!-- End .education-block -->
@@ -225,10 +226,10 @@
     <!-- End #skills -->
 
     <div id="contact">
-    <h2>Get in Touch</h2>
-    <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
-    data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
-        Heehs</a></div>
+        <h2>Get in Touch</h2>
+        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
+            data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
+                Heehs</a></div>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
@@ -259,7 +260,8 @@
                         <li>
                             <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                            <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                        <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin"
+                                aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
