--- a/index.html
+++ b/index.html
@@ -226,10 +226,11 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2>Get in Touch</h2>
+        <h2>Contact Me</h2>
         <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
             data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
-                Heehs</a></div>
+            Heehs</a></div>
+        <p></p>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
