--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/C#.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -177,7 +177,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/JS1.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
