--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                     An intense 4 month coding boot camp hosted by Microsoft at an accredited university for
                     service members, provides academic and hands-on training to fill roles in software engineering.
                 </p>
-                <a href="https://military.microsoft.com/programs/mssa/">More About MSSA</a>
+                <p></p>
+                <a href="https://military.microsoft.com/programs/mssa/">About MSSA</a>
             </div>
 
             <div data-date="December 2012 – December 2018">
@@ -131,12 +132,12 @@
             <h3>Saint Martin's University</h3>
             <span class="education-date">October 2018 - March 2019</span>
             <h4>Certificate in Computer Science (Minor in CS towards Bachelor's)</h4>
-            <p>
+            <ul>
                 <li>
                     Completed classes in Data Structures and Algorithms, Programming in C#, Cloud Solutions and
                     Networking.
                 </li>
-            </p>
+            </ul>
         </div>
         <!-- End .education-block -->
 
