--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/C#.png" />
+                        <img src="/images/C#2.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -178,7 +178,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/JS1.png" />
+                        <img src="/images/JS1.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
