--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="/images/C#2.png" />
+                        <img src="/images/C#1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -178,7 +178,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="/images/JS1.png" />
+                        <img src="/images/JS1.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -228,9 +228,7 @@
 
     <div id="contact">
         <h2>Contact Me</h2>
-        <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
-            data-theme="light" data-vanity="trevor-h"><a class="LI-simple-link" href='https://www.linkedin.com/in/trevor-h?trk=profile-badge'>Trevor
-            Heehs</a></div>
+        <div><img href="https://www.linkedin.com/in/trevor-h/" src="/images/C#1.jpg" /></div>
         <p></p>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
