--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="/images/C#1.jpg" />
+                        <img src="/images/Csharp.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
