--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <div id="contact">
         <h2>Contact Me</h2>
-        <div><img href="https://www.linkedin.com/in/trevor-h/" src="/images/C#1.jpg" /></div>
+        <img href="https://www.linkedin.com/in/trevor-h/" src="/images/C#1.jpg" />
         <p></p>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
