--- a/index.html
+++ b/index.html
@@ -228,7 +228,11 @@
 
     <div id="contact">
         <h2>Contact Me</h2>
-        <img href="https://www.linkedin.com/in/trevor-h/" src="/images/C#1.jpg" />
+        <p>
+            <a text-align="middle" href="https://www.linkedin.com/in/trevor-h/">
+                <img src="/images/linkedin.jpg" width="300" height="300">
+            </a>
+        </p>
         <p></p>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/trevor.heehs@outlook.com">
@@ -258,9 +262,9 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/hDoubleE" target="_blank"><i text-align="center" class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
-                        <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin"
+                        <a href="https://linkedin.com/in/trevor-h" target="_blank"><i text-align="center" class="fa fa-linkedin"
                                 aria-hidden="true"></i></a>
                         </li>
                     </ul>
