--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <h2>Contact Me</h2>
         <p>
             <a text-align="middle" href="https://www.linkedin.com/in/trevor-h/">
-                <img src="/images/linkedin.jpg" width="300" height="300">
+                <img src="/images/linkedin.png" width="128" height="128">
             </a>
         </p>
         <p></p>
