--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div id="contact">
         <h2>Contact Me</h2>
         <p>
-            <a href="https://www.linkedin.com/in/trevor-h/">
+            <a href="https://www.linkedin.com/in/trevor-h/" target="_blank">
                 <img src="/images/linkedin.png" width="128" height="128">
             </a>
         </p>
