--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trevor's Portfolio</title>
+    <title>Trevor Heehs</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -259,12 +259,12 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div class="col-sm-5 social">
+                <div class="social">
                     <ul>
                         <li>
-                            <a href="https://github.com/hDoubleE" target="_blank"><i text-align="center" class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
                         </li>
-                        <a href="https://linkedin.com/in/trevor-h" target="_blank"><i text-align="center" class="fa fa-linkedin"
+                        <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin fa-3x"
                                 aria-hidden="true"></i></a>
                         </li>
                     </ul>
