--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div id="lead-content">
             <h1>Trevor Heehs</h1>
             <h2>Software Engineer</h2>
-            <a href="/resume/Trevor_Heehs_Resume.pdf" download="Trevor_Heehs_Resume.pdf" class="btn-rounded-white">Download
-                Resume</a>
+            <a href="/resume/Trevor_Heehs_Resume.pdf" download="Trevor_Heehs_Resume.pdf" class="btn-rounded-white">
+                Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h2 class="heading">About Me</h2>
+                    <h2 class="heading">About</h2>
                 </div>
                 <div class="col-md-8">
                     <p>
