--- a/index.html
+++ b/index.html
@@ -199,11 +199,12 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>C#</li>
+            <li style= border-radius: 20px; >C#</li>
             <li>JavaScript</li>
             <li>HTML</li>
             <li>CSS</li>
             <li>Angular</li>
+            <li>TypeScript</li>
             <li>Node</li>
             <li>ASP.NET MVC</li>
             <li>Computer Science Fundamentals</li>
