--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div class="social">
+                <div>
                     <ul>
-                        <li>
+                        <li >
                             <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
                         </li>
                         <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin fa-3x"
-                                aria-hidden="true"></i></a>
+                            aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
