--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <p>
                             Examples of Data Structures and Algorithms implemented in C#.
                         </p>
-                        <a href="#">View Code on GitHub</a>
+                        <a href="https://github.com/hDoubleE/csharp-samples.git">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -186,7 +186,7 @@
                         <p>
                             Examples of Data Structures and Algorithms implemented in JavaScript.
                         </p>
-                        <a href="#">View Code on GitHub</a>
+                        <a href="https://github.com/hDoubleE/js-samples.git">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -199,7 +199,7 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li style= border-radius: 20px; >C#</li>
+            <li>C#</li>
             <li>JavaScript</li>
             <li>HTML</li>
             <li>CSS</li>
@@ -260,9 +260,9 @@
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </span>
                 </div>
-                <div>
+                <div class="col-sm-5 social">
                     <ul>
-                        <li >
+                        <li>
                             <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
                         </li>
                         <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin fa-3x"
