--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                         and collaboration, built a track record of providing solutions to complex
                         problems in a critical production environment. A versatile leader and member of
                         high-performance teams, accustomed to doing work with a global impact. Pursuing an
-                        education and career as a software engineer, eager to face new challenges in the fast-paced
-                        technology sector.
+                        education and career as a software engineer, eager to face new challenges.
                     </p>
                 </div>
             </div>
@@ -96,7 +95,7 @@
                 <h3>Microsoft Software & Skills Academy (MSSA)</h3>
                 <h4>Participant</h4>
                 <p>
-                    An intense 4 month coding boot camp hosted by Microsoft at an accredited university for
+                    An intense coding boot camp hosted by Microsoft at an accredited university for
                     service members, provides academic and hands-on training to fill roles in software engineering.
                 </p>
                 <p></p>
