--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        A Navy submarine-force Veteran with a broad range of skills in technology and five years of
-                        experience as a network engineer. Through the application of system knowledge, technical rigor
-                        and collaboration, built a track record of providing solutions to complex
-                        problems in a critical production environment. A versatile leader and member of
-                        high-performance teams, accustomed to doing work with a global impact. Pursuing an
-                        education and career as a software engineer, eager to face new challenges.
+                        Over the last five years I spent two submerged under the ocean, operating advanced networks
+                        and cryptographic systems onboard a nuclear submarine for the Navy. It was a uniquely
+                        challenging and rewarding opportunity that I enjoyed. Questioning why some
+                        systems failed, while others were robust led me to coding, where I gained a deeper
+                        understanding of technology. Since leaving the military, I’ve pursued a formal education in
+                        Computer Science and hands-on training writing code with help from Microsoft. My goal now is to
+                        improve the technology and software that people rely on by delivering high-quality code.
                     </p>
                 </div>
             </div>
@@ -107,7 +108,8 @@
                 <h4>Communications Supervisor | Network Engineer</h4>
                 <p>
                     Managed a team in the operation of a secure communications facility and data center
-                    onboard a nuclear submarine during eight deployments and in support of missions vital to national security.
+                    onboard a nuclear submarine during eight deployments and in support of missions vital to national
+                    security.
                     Consistently recognized and awarded for outstanding performance by three Commanding Officers.
                 </p>
             </div>
@@ -262,10 +264,11 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                            <a href="https://github.com/hDoubleE" target="_blank"><i class="fa fa-github fa-3x"
+                                    aria-hidden="true"></i></a>
                         </li>
                         <a href="https://linkedin.com/in/trevor-h" target="_blank"><i class="fa fa-linkedin fa-3x"
-                            aria-hidden="true"></i></a>
+                                aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
