--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
         <div class="education-block">
             <h3>Community College of Philadelphia</h3>
             <span class="education-date">Graduated 2011</span>
-            <h4>Asociate of Arts in General Studies</h4>
+            <h4>Associate of Arts in General Studies</h4>
             <ul>
                 <li>
-                    Graduated with High Honors while working full-time from this outstanding Philadelphia Community
-                    College.
+                    Graduated with High Honors from this outstanding Philadelphia Community
+                    College working full-time.
                 </li>
             </ul>
         </div>
