--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             <h4>Associate of Arts in General Studies</h4>
             <ul>
                 <li>
-                    Graduated with High Honors from this outstanding Philadelphia Community
-                    College working full-time.
+                    Graduated with High Honors from this outstanding Community
+                    College in Philadelphia.
                 </li>
             </ul>
         </div>
