added tab jumps

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     service members, provides academic and hands-on training to fill roles in software engineering.
                 </p>
                 <p></p>
-                <a href="https://military.microsoft.com/programs/mssa/">About MSSA</a>
+                <a href="https://military.microsoft.com/programs/mssa/" target="_blank">About MSSA</a>
             </div>
 
             <div data-date="December 2012 – December 2018">
@@ -171,7 +171,7 @@
                         <p>
                             Examples of Data Structures and Algorithms implemented in C#.
                         </p>
-                        <a href="https://github.com/hDoubleE/csharp-samples.git">View Code on GitHub</a>
+                        <a href="https://github.com/hDoubleE/csharp-samples.git" target="_blank">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -187,7 +187,7 @@
                         <p>
                             Examples of Data Structures and Algorithms implemented in JavaScript.
                         </p>
-                        <a href="https://github.com/hDoubleE/js-samples.git">View Code on GitHub</a>
+                        <a href="https://github.com/hDoubleE/js-samples.git" target="_blank">View Code on GitHub</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
